Modified Redux store

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pawtet",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://miro-estore-app.herokuapp.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
