Prepare for deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pawtet",
+  "proxy":"https://miro-estore-app.herokuapp.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
